Crystal
- Changed title name
- Fixed spelling errors
- Added simple homepage (index.html)