@@ -1,21 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to AMS Music Store!</title>
-<link href="bookbiz.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<div id="homepage">
-	<h1>Welcome to AMS Music Store!</h1>
-	<h2>Please select one.</h2>
-	<br>
-	<a href="CustomerRegistration.php" title="Customer Login"><h3>Customers</h3></a>
-	<h3>Clerks (available soon!)</h3>
-	<h3>Managers (available soon!)</h3>
-</div>
-
-</body>
-
-</html>
