@@ -1,7 +1,0 @@
-h1 {
-	font-family: verdana,helvetica;
-	font-size: 24px;
-	font-weight: bold;
-	color: #0B0B61;
-	
-}
