@@ -2,3 +2,9 @@ Crystal
 - Changed title name
 - Fixed spelling errors
 - Added simple homepage (index.html)
+
+Vojin
+-Changed link for Customer to go to Login page
+-Added SignUp to the login page if the customer is not registered already
+-Made bookbiz be the css file for the login page
+-Changed name of index to home.html
